--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,10 @@ default: &default
 development:
   <<: *default
   database: backend_development
-  username: test
-  password: test
+  username: test5
+  password: test5
+  host: localhost
+  port: 5432
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,8 +62,10 @@ development:
 test:
   <<: *default
   database: backend_test
-  username: test
-  password: test
+  username: test5
+  password: test5
+  host: localhost
+  port: 5432
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -86,5 +90,7 @@ test:
 production:
   <<: *default
   database: backend_production
-  username: test
-  password: test
+  username: test5
+  password: test5
+  host: localhost
+  port: 5432
