--- a/config/database.yml
+++ b/config/database.yml
@@ -89,8 +89,4 @@ test:
 #
 production:
   <<: *default
-  database: backend_production
-  username: test5
-  password: test5
-  host: localhost
-  port: 5432
+  url: <%=ENV['DATABASE_URL'] %>
