--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,13 +24,15 @@
     "sass": "^1.26.10",
     "sass-loader": "^10.0.1",
     "style-loader": "^1.2.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.88.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "cross-env": "^7.0.2",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.14.2"
   }
 }
